--- a/index.html
+++ b/index.html
@@ -2,10 +2,44 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>Le titre de ma page</title>
+        <title>OhMyFood</title>
+        <link rel="stylesheet" href="./SASS/index.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
+        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
-        <h1>hello world</h1>
-        <h2>mager du loup</h2>
+        <header>
+            <div class="header__logo">
+                <img src="./assets/images/ohmyfood.png">
+            </div>
+            <div class="header__localisation">
+                <p><i class="fa-solid fa-location-dot"></i>Paris, Belleville</p>
+            </div>
+            <div class="header__banner">
+                <h1 class="header__banner--title">Réservez le menu qui vous convient</h1>
+                <p class="header__banner--paragraph">Découvrez des restaurants d’exception, sélectionnés par nos soins.</p>
+                <div class="header__banner--button">
+                    <a class="header__banner--button--link" href="#">Explorer nos restaurants</a>
+                </div>
+            </div>
+        </header>
+        <main>
+            <section class="filters">
+                <div class="filters__title">
+                    <h2>Fonctionnement</h2>
+                </div>
+                <div class="filters__contener">
+                    <a class="filters__contener--link" href="#"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</a>
+                    <a class="filters__contener--link" href="#"><i class="fa-solid fa-list"></i>Composez votre menu</a>
+                    <a class="filters__contener--link" href="#"><i class="fa-solid fa-store"></i>Dégustez au restaurant</a>
+                </div>
+
+            </section>
+        </main>
+        
     </body>
 </html>
