--- a/index.html
+++ b/index.html
@@ -37,7 +37,26 @@
                     <a class="filters__contener--link" href="#"><i class="fa-solid fa-list"></i>Composez votre menu</a>
                     <a class="filters__contener--link" href="#"><i class="fa-solid fa-store"></i>Dégustez au restaurant</a>
                 </div>
-
+            </section>
+            <section class="restaurants">
+                <div class="restaurants__title">
+                    <h3>Restaurants</h3>
+                </div>
+                <div class="restaurants__cards">
+                    <a href="#">
+                        <article class="restaurants__cards--card">
+                            <img class="restaurants__cards--card-img" src="assets/images/restaurants/resto1.jpg" alt="Image du restaurant La palette du goût">
+                            <div class="restaurants__cards--card-content">
+                                <h4 class="restaurants__cards--card-content-title">La palette du goût</h4>
+                                <p class="restaurants__cards--card-content-subtitle">Ménilmontant</p>
+                            </div>
+                            <div class="restaurants__cards--card-like">
+                                <i class="fa-light fa-heart"></i>
+                            </div>
+                        </article>
+                    </a>
+                </div>
+                
             </section>
         </main>
         
