--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css"
-        integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
+<link href="https://fonts.googleapis.com/css2?family=Shrikhand&display=swap" rel="stylesheet">
+<script src="https://kit.fontawesome.com/7b7941dd93.js" crossorigin="anonymous"></script>
     </head>
     <body>
         <header>
             <div class="header__logo">
-                <img src="./assets/images/ohmyfood.png">
+                <img src="./assets/images/ohmyfood.png" alt="logo ohmyfood">
             </div>
             <div class="header__localisation">
                 <p><i class="fa-solid fa-location-dot"></i>Paris, Belleville</p>
@@ -33,8 +32,11 @@
                     <h2>Fonctionnement</h2>
                 </div>
                 <div class="filters__contener">
+                    <button class="filters__contener--button">1</button>
                     <a class="filters__contener--link" href="#"><i class="fa-solid fa-mobile-screen-button"></i>Choisissez un restaurant</a>
+                    <button class="filters__contener--button">2</button>
                     <a class="filters__contener--link" href="#"><i class="fa-solid fa-list"></i>Composez votre menu</a>
+                    <button class="filters__contener--button">3</button>
                     <a class="filters__contener--link" href="#"><i class="fa-solid fa-store"></i>Dégustez au restaurant</a>
                 </div>
             </section>
@@ -51,14 +53,59 @@
                                 <p class="restaurants__cards--card-content-subtitle">Ménilmontant</p>
                             </div>
                             <div class="restaurants__cards--card-like">
-                                <i class="fa-light fa-heart"></i>
+                                <i class="fa-regular fa-heart"></i>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="restaurants__cards--card">
+                            <img class="restaurants__cards--card-img" src="assets/images/restaurants/resto1.jpg" alt="Image du restaurant La palette du goût">
+                            <div class="restaurants__cards--card-content">
+                                <h4 class="restaurants__cards--card-content-title">La palette du goût</h4>
+                                <p class="restaurants__cards--card-content-subtitle">Ménilmontant</p>
+                            </div>
+                            <div class="restaurants__cards--card-like">
+                                <i class="fa-regular fa-heart"></i>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="restaurants__cards--card">
+                            <img class="restaurants__cards--card-img" src="assets/images/restaurants/resto1.jpg" alt="Image du restaurant La palette du goût">
+                            <div class="restaurants__cards--card-content">
+                                <h4 class="restaurants__cards--card-content-title">La palette du goût</h4>
+                                <p class="restaurants__cards--card-content-subtitle">Ménilmontant</p>
+                            </div>
+                            <div class="restaurants__cards--card-like">
+                                <i class="fa-regular fa-heart"></i>
+                            </div>
+                        </article>
+                    </a>
+                    <a href="#">
+                        <article class="restaurants__cards--card">
+                            <img class="restaurants__cards--card-img" src="assets/images/restaurants/resto1.jpg" alt="Image du restaurant La palette du goût">
+                            <div class="restaurants__cards--card-content">
+                                <h4 class="restaurants__cards--card-content-title">La palette du goût</h4>
+                                <p class="restaurants__cards--card-content-subtitle">Ménilmontant</p>
+                            </div>
+                            <div class="restaurants__cards--card-like">
+                                <i class="fa-regular fa-heart"></i>
                             </div>
                         </article>
                     </a>
                 </div>
-                
             </section>
         </main>
+        <footer>
+            <img class="footer__logo" src="assets/images/ohmyfood3.png" alt="logo OMF footer">
+            <div class="footer__links">
+                <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
+                <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
+                <a href="#">Mentions légales</a>
+                <a href="#">Contact</a>
+            </div>
+
+        </footer>
         
     </body>
 </html>
