--- a/resto2.html
+++ b/resto2.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>La palette du goût</title>
+        <title>Le délice des sensd</title>
         <link rel="stylesheet" href="./SASS/resto.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,13 +23,13 @@
                 </div>
             </nav>
             <div class="banner">
-                <img src="assets/images/restaurants/resto1.jpg" alt="photo restaurant"> 
+                <img src="assets/images/restaurants/la-note.jpg" alt="photo restaurant"> 
             </div>    
         </header>
         <main>
             <section class="menu">
                 <div class="menu__head">
-                    <h1 class="menu__head--title">La palette du goût</h1>
+                    <h1 class="menu__head--title">Le délice des sens</h1>
                     <i class="fa-regular fa-heart"></i>
                 </div>
                 <div class="menu__choice">
@@ -37,8 +37,8 @@
                         <h2 class="menu__choice--title"><span class="menu__choice--title-highlight">ENTRÉES</span></h2>
                         <div class="menu__choice--card">
                             <div class="menu__choice--card-content">
-                                <h3 class="menu__choice--card-content-title">Fricassée d'escargots</h3>
-                                <p class="menu__choice--card-content-subtitle">Au piment d'Espelette </p>
+                                <h3 class="menu__choice--card-content-title">Tartare de thon</h3>
+                                <p class="menu__choice--card-content-subtitle">Assaisonné au yuzu</p>
                             </div>
                             <div class="menu__choice--card-price">
                                 <p>25€</p>
@@ -47,8 +47,8 @@
                         </div>
                         <div class="menu__choice--card">
                             <div class="menu__choice--card-content">
-                                <h3 class="menu__choice--card-content-title">Foie gras de canard mi-cuit</h3>
-                                <p class="menu__choice--card-content-subtitle">Et ses copeaux de truffe noire</p>
+                                <h3 class="menu__choice--card-content-title">Bouchée de homard croustillant</h3>
+                                <p class="menu__choice--card-content-subtitle">Et sa farandole de petits légumes</p>
                             </div>
                             <div class="menu__choice--card-price">
                                 <p>35€</p>
@@ -57,8 +57,8 @@
                         </div>
                         <div class="menu__choice--card">
                             <div class="menu__choice--card-content">
-                                <h3 class="menu__choice--card-content-title">Œuf au plat</h3>
-                                <p class="menu__choice--card-content-subtitle">Assaisonné à la truffe sur lit de caviar</p>
+                                <h3 class="menu__choice--card-content-title">Velouté de cèpes </h3>
+                                <p class="menu__choice--card-content-subtitle">Aux truffes</p>
                             </div>
                             <div class="menu__choice--card-price">
                                 <p>20€</p>
@@ -70,8 +70,8 @@
                     <h2 class="menu__choice--title"><span class="menu__choice--title-highlight">PLATS</span></h2>
                     <div class="menu__choice--card">
                         <div class="menu__choice--card-content">
-                            <h3 class="menu__choice--card-content-title">Filet de bœuf aux herbes</h3>
-                            <p class="menu__choice--card-content-subtitle">Accompagné de sa ribambelle de légumes </p>
+                            <h3 class="menu__choice--card-content-title">Poulet rôti aux herbes de Provence </h3>
+                            <p class="menu__choice--card-content-subtitle">Et sa crème de truffe</p>
                         </div>
                         <div class="menu__choice--card-price">
                             <p>40€</p>
@@ -80,8 +80,8 @@
                     </div>
                     <div class="menu__choice--card">
                         <div class="menu__choice--card-content">
-                            <h3 class="menu__choice--card-content-title">Parmentier de queue de bœuf</h3>
-                            <p class="menu__choice--card-content-subtitle">À la truffe noire sur sa purée de panais</p>
+                            <h3 class="menu__choice--card-content-title">Langouste rôtie </h3>
+                            <p class="menu__choice--card-content-subtitle">Et ses légumes de saison</p>
                         </div>
                         <div class="menu__choice--card-price">
                             <p>35€</p>
@@ -90,8 +90,8 @@
                     </div>
                     <div class="menu__choice--card">
                         <div class="menu__choice--card-content">
-                            <h3 class="menu__choice--card-content-title">Filet de turbot</h3>
-                            <p class="menu__choice--card-content-subtitle">Aux agrumes</p>
+                            <h3 class="menu__choice--card-content-title">Côte de bœuf Angus</h3>
+                            <p class="menu__choice--card-content-subtitle">Et sa purée de panais</p>
                         </div>
                         <div class="menu__choice--card-price">
                             <p>44€</p>
@@ -102,8 +102,8 @@
                         <h2 class="menu__choice--title"><span class="menu__choice--title-highlight">DESSERT</span></h2>
                         <div class="menu__choice--card">
                             <div class="menu__choice--card-content">
-                                <h3 class="menu__choice--card-content-title">Paris-Brest</h3>
-                                <p class="menu__choice--card-content-subtitle">Revisité</p>
+                                <h3 class="menu__choice--card-content-title">Farandole de desserts</h3>
+                                <p class="menu__choice--card-content-subtitle">Du chef</p>
                             </div>
                             <div class="menu__choice--card-price">
                                 <p>18€</p>
@@ -112,8 +112,8 @@
                         </div>
                         <div class="menu__choice--card">
                             <div class="menu__choice--card-content">
-                                <h3 class="menu__choice--card-content-title">Macaron au chocolat d'exception</h3>
-                                <p class="menu__choice--card-content-subtitle">Et glace à la vanille de Madagascar</p>
+                                <h3 class="menu__choice--card-content-title">Crème brulée</h3>
+                                <p class="menu__choice--card-content-subtitle">Revisitée</p>
                             </div>
                             <div class="menu__choice--card-price">
                                 <p>22€</p>
@@ -122,8 +122,8 @@
                         </div>
                         <div class="menu__choice--card">
                             <div class="menu__choice--card-content">
-                                <h3 class="menu__choice--card-content-title">Mousse au chocolat</h3>
-                                <p class="menu__choice--card-content-subtitle">Au piment d'Espelette et à la truffe noire</p>
+                                <h3 class="menu__choice--card-content-title">Tiramisu</h3>
+                                <p class="menu__choice--card-content-subtitle">À la noisette</p>
                             </div>
                             <div class="menu__choice--card-price">
                                 <p>23€</p>
