--- a/resto3.html
+++ b/resto3.html
@@ -2,7 +2,7 @@
 <html lang="fr">
     <head>
         <meta charset="utf-8">
-        <title>La palette du goût</title>
+        <title>La note enchantée</title>
         <link rel="stylesheet" href="./SASS/resto.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -23,13 +23,13 @@
                 </div>
             </nav>
             <div class="banner">
-                <img src="assets/images/restaurants/resto1.jpg" alt="photo restaurant"> 
+                <img src="assets/images/restaurants/francaise.jpg" alt="photo restaurant"> 
             </div>    
         </header>
         <main>
             <section class="menu">
                 <div class="menu__head">
-                    <h1 class="menu__head--title">La palette du goût</h1>
+                    <h1 class="menu__head--title">La note enchantée</h1>
                     <i class="fa-regular fa-heart"></i>
                 </div>
                 <div class="menu__choice">
@@ -37,8 +37,8 @@
                         <h2 class="menu__choice--title"><span class="menu__choice--title-highlight">ENTRÉES</span></h2>
                         <div class="menu__choice--card">
                             <div class="menu__choice--card-content">
-                                <h3 class="menu__choice--card-content-title">Fricassée d'escargots</h3>
-                                <p class="menu__choice--card-content-subtitle">Au piment d'Espelette </p>
+                                <h3 class="menu__choice--card-content-title">Ravioles de foie gras</h3>
+                                <p class="menu__choice--card-content-subtitle">Accompagnées de leur crème à la truffe</p>
                             </div>
                             <div class="menu__choice--card-price">
                                 <p>25€</p>
@@ -47,8 +47,8 @@
                         </div>
                         <div class="menu__choice--card">
                             <div class="menu__choice--card-content">
-                                <h3 class="menu__choice--card-content-title">Foie gras de canard mi-cuit</h3>
-                                <p class="menu__choice--card-content-subtitle">Et ses copeaux de truffe noire</p>
+                                <h3 class="menu__choice--card-content-title">Caviar osciètre</h3>
+                                <p class="menu__choice--card-content-subtitle">Sur blini à la farine de blé noir</p>
                             </div>
                             <div class="menu__choice--card-price">
                                 <p>35€</p>
@@ -57,11 +57,21 @@
                         </div>
                         <div class="menu__choice--card">
                             <div class="menu__choice--card-content">
-                                <h3 class="menu__choice--card-content-title">Œuf au plat</h3>
-                                <p class="menu__choice--card-content-subtitle">Assaisonné à la truffe sur lit de caviar</p>
+                                <h3 class="menu__choice--card-content-title">Homard et espuma de potiron</h3>
+                                <p class="menu__choice--card-content-subtitle">Marinés aux zestes d'orange</p>
                             </div>
                             <div class="menu__choice--card-price">
                                 <p>20€</p>
+                                <div class="check"><i class="fa-solid fa-circle-check"></i></div>
+                            </div>
+                        </div>
+                        <div class="menu__choice--card">
+                            <div class="menu__choice--card-content">
+                                <h3 class="menu__choice--card-content-title">Foie gras de canard cuit entier</h3>
+                                <p class="menu__choice--card-content-subtitle">Confiture de figue et pain toasté</p>
+                            </div>
+                            <div class="menu__choice--card-price">
+                                <p>35€</p>
                                 <div class="check"><i class="fa-solid fa-circle-check"></i></div>
                             </div>
                         </div>
@@ -70,8 +80,8 @@
                     <h2 class="menu__choice--title"><span class="menu__choice--title-highlight">PLATS</span></h2>
                     <div class="menu__choice--card">
                         <div class="menu__choice--card-content">
-                            <h3 class="menu__choice--card-content-title">Filet de bœuf aux herbes</h3>
-                            <p class="menu__choice--card-content-subtitle">Accompagné de sa ribambelle de légumes </p>
+                            <h3 class="menu__choice--card-content-title">Noix de coquilles Saint-Jacques</h3>
+                            <p class="menu__choice--card-content-subtitle">Sur lit de purée de céleri-rave</p>
                         </div>
                         <div class="menu__choice--card-price">
                             <p>40€</p>
@@ -80,8 +90,8 @@
                     </div>
                     <div class="menu__choice--card">
                         <div class="menu__choice--card-content">
-                            <h3 class="menu__choice--card-content-title">Parmentier de queue de bœuf</h3>
-                            <p class="menu__choice--card-content-subtitle">À la truffe noire sur sa purée de panais</p>
+                            <h3 class="menu__choice--card-content-title">Langoustine poêlée</h3>
+                            <p class="menu__choice--card-content-subtitle">Purée de patate douce</p>
                         </div>
                         <div class="menu__choice--card-price">
                             <p>35€</p>
@@ -90,8 +100,8 @@
                     </div>
                     <div class="menu__choice--card">
                         <div class="menu__choice--card-content">
-                            <h3 class="menu__choice--card-content-title">Filet de turbot</h3>
-                            <p class="menu__choice--card-content-subtitle">Aux agrumes</p>
+                            <h3 class="menu__choice--card-content-title">Mijoté de queue de bœuf</h3>
+                            <p class="menu__choice--card-content-subtitle">Et riz sauvage aux zestes de citron</p>
                         </div>
                         <div class="menu__choice--card-price">
                             <p>44€</p>
@@ -102,8 +112,8 @@
                         <h2 class="menu__choice--title"><span class="menu__choice--title-highlight">DESSERT</span></h2>
                         <div class="menu__choice--card">
                             <div class="menu__choice--card-content">
-                                <h3 class="menu__choice--card-content-title">Paris-Brest</h3>
-                                <p class="menu__choice--card-content-subtitle">Revisité</p>
+                                <h3 class="menu__choice--card-content-title">Macaron noisette et chocolat</h3>
+                                <p class="menu__choice--card-content-subtitle">Glace au caramel brun et sel de Guérande</p>
                             </div>
                             <div class="menu__choice--card-price">
                                 <p>18€</p>
@@ -112,8 +122,8 @@
                         </div>
                         <div class="menu__choice--card">
                             <div class="menu__choice--card-content">
-                                <h3 class="menu__choice--card-content-title">Macaron au chocolat d'exception</h3>
-                                <p class="menu__choice--card-content-subtitle">Et glace à la vanille de Madagascar</p>
+                                <h3 class="menu__choice--card-content-title">Baba au rhum revisité </h3>
+                                <p class="menu__choice--card-content-subtitle">Avec son coulis de citron</p>
                             </div>
                             <div class="menu__choice--card-price">
                                 <p>22€</p>
@@ -122,8 +132,8 @@
                         </div>
                         <div class="menu__choice--card">
                             <div class="menu__choice--card-content">
-                                <h3 class="menu__choice--card-content-title">Mousse au chocolat</h3>
-                                <p class="menu__choice--card-content-subtitle">Au piment d'Espelette et à la truffe noire</p>
+                                <h3 class="menu__choice--card-content-title">Tarte au citron meringuée</h3>
+                                <p class="menu__choice--card-content-subtitle">Déstructurée</p>
                             </div>
                             <div class="menu__choice--card-price">
                                 <p>23€</p>
