--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                     <a href="reso1.html">
                         <article class="restaurants__cards--card">
                             <img class="restaurants__cards--card-img" src="assets/images/restaurants/resto1.jpg" alt="Image du restaurant La palette du goût">
+                            <div class="restaurants__cards--card-new">Nouveau</div>
                             <div class="restaurants__cards--card-content">
                                 <h4 class="restaurants__cards--card-content-title">La palette du goût</h4>
                                 <p class="restaurants__cards--card-content-subtitle">Ménilmontant</p>
@@ -71,9 +72,10 @@
                     <a href="resto2.html">
                         <article class="restaurants__cards--card">
                             <img class="restaurants__cards--card-img" src="assets/images/restaurants/la-note.jpg" alt="Image du restaurant La palette du goût">
+                            <div class="restaurants__cards--card-new">Nouveau</div>
                             <div class="restaurants__cards--card-content">
-                                <h4 class="restaurants__cards--card-content-title">La palette du goût</h4>
-                                <p class="restaurants__cards--card-content-subtitle">Ménilmontant</p>
+                                <h4 class="restaurants__cards--card-content-title">La note enchantée</h4>
+                                <p class="restaurants__cards--card-content-subtitle">Charonne</p>
                             </div>
                             <div class="restaurants__cards--card-like">
                                 <i class="fa-regular fa-heart"></i>
@@ -84,8 +86,8 @@
                         <article class="restaurants__cards--card">
                             <img class="restaurants__cards--card-img" src="assets/images/restaurants/francaise.jpg" alt="Image du restaurant La palette du goût">
                             <div class="restaurants__cards--card-content">
-                                <h4 class="restaurants__cards--card-content-title">La palette du goût</h4>
-                                <p class="restaurants__cards--card-content-subtitle">Ménilmontant</p>
+                                <h4 class="restaurants__cards--card-content-title">À la française</h4>
+                                <p class="restaurants__cards--card-content-subtitle">Cité Rouge</p>
                             </div>
                             <div class="restaurants__cards--card-like">
                                 <i class="fa-regular fa-heart"></i>
@@ -96,8 +98,8 @@
                         <article class="restaurants__cards--card">
                             <img class="restaurants__cards--card-img" src="assets/images/restaurants/delice.jpg" alt="Image du restaurant La palette du goût">
                             <div class="restaurants__cards--card-content">
-                                <h4 class="restaurants__cards--card-content-title">La palette du goût</h4>
-                                <p class="restaurants__cards--card-content-subtitle">Ménilmontant</p>
+                                <h4 class="restaurants__cards--card-content-title">Le délice des sens</h4>
+                                <p class="restaurants__cards--card-content-subtitle">Folie-Méricourt</p>
                             </div>
                             <div class="restaurants__cards--card-like">
                                 <i class="fa-regular fa-heart"></i>
