--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </div>
             </section>
         </main>
-        <footer>
+        <footer class="footer">
             <div class="footer__content">
                 <p class="footer__content--logo">OhMyFood</p>
                 <div class="footer__content--links">
