--- a/resto4.html
+++ b/resto4.html
@@ -136,7 +136,7 @@
                 <button>Commander</button>
                </div>
             </section>
-            <footer>
+            <footer class="footer">
                 <div class="footer__content">
                     <p class="footer__content--logo">OhMyFood</p>
                     <div class="footer__content--links">
