projet OMF FINAL

--- a/index.html
+++ b/index.html
@@ -56,57 +56,48 @@
                     <h3>Restaurants</h3>
                 </div>
                 <div class="restaurants__cards">
-                    <a href="reso1.html">
-                        <article class="restaurants__cards--card">
-                            <img class="restaurants__cards--card-img" src="assets/images/restaurants/resto1.jpg" alt="Image du restaurant La palette du goût">
-                            <div class="restaurants__cards--card-new">Nouveau</div>
-                            <div class="restaurants__cards--card-content">
-                                <h4 class="restaurants__cards--card-content-title">La palette du goût</h4>
-                                <p class="restaurants__cards--card-content-subtitle">Ménilmontant</p>
-                            </div>
-                    </a>
+                            <article class="restaurants__cards--card">
+                                <a href="reso1.html"><img class="restaurants__cards--card-img" src="assets/images/restaurants/resto1.jpg" alt="Image du restaurant La palette du goût"></a>
+                                <div class="restaurants__cards--card-new">Nouveau</div>
+                                <div class="restaurants__cards--card-content">
+                                    <h4 class="restaurants__cards--card-content-title">La palette du goût</h4>
+                                    <p class="restaurants__cards--card-content-subtitle">Ménilmontant</p>
+                                </div> 
                             <div class="restaurants__cards--card-like">
                                 <i class="fa-regular fa-heart"></i>
                             </div>
-                        </article>
-                  
-                    <a href="resto2.html">
-                        <article class="restaurants__cards--card">
-                            <img class="restaurants__cards--card-img" src="assets/images/restaurants/la-note.jpg" alt="Image du restaurant La palette du goût">
-                            <div class="restaurants__cards--card-new">Nouveau</div>
-                            <div class="restaurants__cards--card-content">
-                                <h4 class="restaurants__cards--card-content-title">La note enchantée</h4>
-                                <p class="restaurants__cards--card-content-subtitle">Charonne</p>
-                            </div>
-                    </a>
+                            </article>
+                            <article class="restaurants__cards--card">
+                                <a href="resto2.html"><img class="restaurants__cards--card-img" src="assets/images/restaurants/la-note.jpg" alt="Image du restaurant La palette du goût"></a>
+                                <div class="restaurants__cards--card-new">Nouveau</div>
+                                <div class="restaurants__cards--card-content">
+                                    <h4 class="restaurants__cards--card-content-title">La note enchantée</h4>
+                                    <p class="restaurants__cards--card-content-subtitle">Charonne</p>
+                                </div> 
                             <div class="restaurants__cards--card-like">
                                 <i class="fa-regular fa-heart"></i>
                             </div>
-                        </article>
-                    <a href="resto3.html">
-                        <article class="restaurants__cards--card">
-                            <img class="restaurants__cards--card-img" src="assets/images/restaurants/francaise.jpg" alt="Image du restaurant La palette du goût">
-                            <div class="restaurants__cards--card-content">
-                                <h4 class="restaurants__cards--card-content-title">À la française</h4>
-                                <p class="restaurants__cards--card-content-subtitle">Cité Rouge</p>
+                            </article>
+                            <article class="restaurants__cards--card">
+                                <a href="resto3.html"><img class="restaurants__cards--card-img" src="assets/images/restaurants/francaise.jpg" alt="Image du restaurant La palette du goût"></a>
+                                <div class="restaurants__cards--card-content">
+                                    <h4 class="restaurants__cards--card-content-title">À la française</h4>
+                                    <p class="restaurants__cards--card-content-subtitle">Cité Rouge</p>
+                                </div>
+                             <div class="restaurants__cards--card-like">
+                                <i class="fa-regular fa-heart"></i>
                             </div>
-                    </a>
+                            </article>
+                            <article class="restaurants__cards--card">
+                                <a href="resto4.html"><img class="restaurants__cards--card-img" src="assets/images/restaurants/delice.jpg" alt="Image du restaurant La palette du goût"></a>
+                                <div class="restaurants__cards--card-content">
+                                    <h4 class="restaurants__cards--card-content-title">Le délice des sens</h4>
+                                    <p class="restaurants__cards--card-content-subtitle">Folie-Méricourt</p>
+                                </div>
                             <div class="restaurants__cards--card-like">
                                 <i class="fa-regular fa-heart"></i>
                             </div>
-                        </article>
-                    <a href="resto4.html">
-                        <article class="restaurants__cards--card">
-                            <img class="restaurants__cards--card-img" src="assets/images/restaurants/delice.jpg" alt="Image du restaurant La palette du goût">
-                            <div class="restaurants__cards--card-content">
-                                <h4 class="restaurants__cards--card-content-title">Le délice des sens</h4>
-                                <p class="restaurants__cards--card-content-subtitle">Folie-Méricourt</p>
-                            </div>
-                    </a>
-                            <div class="restaurants__cards--card-like">
-                                <i class="fa-regular fa-heart"></i>
-                            </div>
-                        </article>
+                            </article>
                 </div>
             </section>
         </main>
@@ -117,7 +108,7 @@
                     <a href="#"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</a>
                     <a href="#"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</a>
                     <a href="#">Mentions légales</a>
-                    <a href="#">Contact</a>
+                    <a href="mailto:votreadresse@mail.fr">Contact</a>
                 </div>
             </div>
         </footer>
